objects/NPS_Survey_Results__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>TEXT( Client__r.Account_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <description>Detractor if value equals 1</description>
        <formula>IF(NPS_Score__c &lt; 7, 1, 0)</formula>
        <inlineHelpText>Detractor if value equals 1</inlineHelpText>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ease__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? -  Ease</inlineHelpText>
        <label>Ease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What are the primary reasons you chose to partner with ProService? - Expertise</description>
        <label>Expertise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Specialist__c</fullName>
        <formula>Client__r.Implementation_Specialist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lack_of_Own_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? - Lack of Own Resources</inlineHelpText>
        <label>Lack of Own Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Category__c</fullName>
        <formula>If(
   AND(NPS_Score__c &gt;= 0, NPS_Score__c &lt;= 6),
   "Detractor",
   If(
      AND(NPS_Score__c &gt;= 7, NPS_Score__c &lt;= 8),
      "Passive",
      If(
         AND(NPS_Score__c &gt;= 9, NPS_Score__c &lt;= 10),
         "Promoter",
         "N/A"
      )
   )
)</formula>
        <label>NPS Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Reason__c</fullName>
        <label>NPS Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Please_Specify__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? - Other (Please Specify)</inlineHelpText>
        <label>Other (Please Specify)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_TEXT_Please_Specify__c</fullName>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? - Other-TEXT (Please Specify)</inlineHelpText>
        <label>Other-TEXT (Please Specify)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partnership__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? - Partnership</inlineHelpText>
        <label>Partnership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passive__c</fullName>
        <description>Passive if value equals 1</description>
        <formula>IF(AND(NPS_Score__c &gt; 6, NPS_Score__c &lt; 9), 1, 0)</formula>
        <inlineHelpText>Passive if value equals 1</inlineHelpText>
        <label>Passive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>People_Experiences__c</fullName>
        <label>People/Experiences</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <description>Power of One.
Needed for reports.
See following link for details on why this field was added: 
https://success.salesforce.com/answers?id=9063000000048RbAAI</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promoter__c</fullName>
        <description>Promoter if value equals 1</description>
        <formula>IF(NPS_Score__c &gt; 8, 1, 0)</formula>
        <inlineHelpText>Promoter if value equals 1</inlineHelpText>
        <label>Promoter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <description>Needed for reporting.</description>
        <formula>IF( No_Response__c, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Process_Reason__c</fullName>
        <label>Sales Process Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Process_Score__c</fullName>
        <label>Sales Process Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strengthen_Partnership__c</fullName>
        <label>Strengthen Partnership</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Client__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOC_Completion_Date__c</fullName>
        <label>VOC Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VOC_Type__c</fullName>
        <label>VOC Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_for_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>What are the primary reasons you chose to partner with ProService? - Value for Cost</inlineHelpText>
        <label>Value for Cost</label>
        <type>Checkbox</type>
    </fields>
    <label>NPS Survey Results</label>
    <nameField>
        <label>NPS Survey Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Survey Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Client__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>NPS_Score__c</columns>
        <columns>VOC_Completion_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VOC_Completion_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Client__c</field>
            <operation>notContain</operation>
            <value>Jon Test Client,Mondaycall Test</value>
        </filters>
        <label>All Surveys</label>
    </listViews>
    <listViews>
        <fullName>NPS_Score_6_Under</fullName>
        <columns>NAME</columns>
        <columns>VOC_Completion_Date__c</columns>
        <columns>Client_Name__c</columns>
        <columns>Client_ID__c</columns>
        <columns>NPS_Score__c</columns>
        <columns>NPS_Reason__c</columns>
        <columns>Sales_Process_Score__c</columns>
        <columns>Sales_Process_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NPS_Score__c</field>
            <operation>lessOrEqual</operation>
            <value>6</value>
        </filters>
        <label>NPS Score 6 Under</label>
        <sharedTo>
            <role>IT</role>
        </sharedTo>
    </listViews>
</CustomObject>